# SimpleChat

./: app.py  pyproject.toml
templates/: message.html
