[tool.poetry]
name = "python-socketio-app-youtube"
version = "0.1.0"
description = ""
authors = ["Weston Gorczyca <weston.gorczyca@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.0.3"
flask-socketio = "^5.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
